[package]
edition = "2021"
name = "minput-mirror"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4"
rdev = "0.5.1"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
